--- a/.env.local
+++ b/.env.local
@@ -5,3 +5,6 @@ AUTH_GOOGLE_ID='1023452282149-58kucibqqusp9a3l9v0vfnvcicpq73j8.apps.googleuserco
 AUTH_GOOGLE_SECRET='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'
 AUTH_TRUST_HOST=http://192.168.100.17:3111
 NEXTAUTH_URL_INTERNAL=http://192.168.100.17:3111
+MONGODB_URI='mongodb://localhost:27017/marketplace'
+NEXT_SERVER_URI='http://localhost:3111/api/v1'
+NEXT_SOCKET_URI='http://localhost:3111'
