--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "relative-time-format": "^1.1.6",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.1",
     "swiper": "^11.2.1",
     "tailwind-merge": "^2.6.0",
