--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "PORT=3111 next dev --turbopack",
+    "dev": "next dev  --turbopack  -p 3000",
+    "dev:socket": "NODE_OPTIONS='--loader ts-node/esm --trace-warnings --no-warnings' ts-node server.mts",
+    "app": "concurrently \"pnpm dev\" \"pnpm dev:socket\"",
+    "server": "node ./server.js",
     "build": "next build",
-    "start": "PORT=3111 next start",
-    "lint": "next lint"
+    "start": "PORT=3000 next start",
+    "lint": "next lint",
+    "build:models": "tsc --project tsconfig.models.json"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -22,15 +26,21 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
+    "@types/express": "^5.0.1",
     "axios": "^1.7.9",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
+    "express": "^5.1.0",
+    "formidable": "^3.5.2",
     "framer-motion": "^12.6.3",
     "iconsax-react": "^0.0.8",
     "javascript-time-ago": "^2.5.11",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.469.0",
+    "mongoose": "^8.13.2",
     "next": "15.2.2",
     "next-auth": "5.0.0-beta.25",
     "next-images": "^1.8.5",
@@ -40,6 +50,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "relative-time-format": "^1.1.6",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.7.1",
     "swiper": "^11.2.1",
@@ -51,15 +62,27 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@svgr/webpack": "^8.1.0",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/formidable": "^3.4.5",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/mongoose": "^5.11.97",
+    "@types/next": "^9.0.0",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^3.0.0",
+    "concurrently": "^9.1.2",
+    "csstype": "^3.1.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5",
+    "undici-types": "^7.7.0"
   }
 }
