--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "marketplace",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev  --turbopack  -p 3000",
-    "dev:socket": "NODE_OPTIONS='--loader ts-node/esm --trace-warnings --no-warnings' ts-node server.mts",
+    "dev:socket": "NODE_OPTIONS='--loader ts-node/esm --trace-warnings --no-warnings' ts-node server.ts",
     "app": "concurrently \"pnpm dev\" \"pnpm dev:socket\"",
     "server": "node ./server.js",
     "build": "next build",
@@ -32,6 +33,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.2",
     "express": "^5.1.0",
     "formidable": "^3.5.2",
