--- a/.env.local
+++ b/.env.local
@@ -5,10 +5,10 @@ AUTH_GOOGLE_ID='1023452282149-58kucibqqusp9a3l9v0vfnvcicpq73j8.apps.googleuserco
 AUTH_GOOGLE_SECRET='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'
 AUTH_TRUST_HOST=http://192.168.100.17:3000
 NEXTAUTH_URL_INTERNAL=http://192.168.100.17:3000
-MONGODB_URI='mongodb+srv://rehmana73724:3SOw9kFROat3IeSR@cluster0.a6tkgh4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+MONGODB_URI='mongodb://localhost:27017/practice'
 NEXT_SERVER_URI='http://localhost:3000/api/v1'
 NEXT_SOCKET_URI='http://localhost:3000'
 NODE_ENV="development"
-HOSTNAME="locahost"
-PORT=4001
+HOSTNAME="d2c3200ab8bd"
+PORT=3000
 JWT_SECRET_KEY='marketplace@143'
