--- a/.env.local
+++ b/.env.local
@@ -5,7 +5,7 @@ AUTH_GOOGLE_ID='1023452282149-58kucibqqusp9a3l9v0vfnvcicpq73j8.apps.googleuserco
 AUTH_GOOGLE_SECRET='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'
 AUTH_TRUST_HOST=http://192.168.100.17:3000
 NEXTAUTH_URL_INTERNAL=http://192.168.100.17:3000
-MONGODB_URI='mongodb://localhost:27017/practice'
+MONGODB_URI='mongodb+srv://atlas-sample-dataset-load-67f96ec0a939f22be8ee9826:3SOw9kFROat3IeSR@cluster0.a6tkgh4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
 NEXT_SERVER_URI='http://localhost:3000/api/v1'
 NEXT_SOCKET_URI='http://localhost:3000'
 NODE_ENV="development"
