--- a/.env.local
+++ b/.env.local
@@ -12,3 +12,14 @@ NODE_ENV="development"
 HOSTNAME="d2c3200ab8bd"
 PORT=3000
 JWT_SECRET_KEY='marketplace@143'
+
+# // "scripts": {
+#   //   "dev": "next dev  --turbopack  -p 3000",
+#   //   "dev:socket": "NODE_OPTIONS='--loader ts-node/esm --trace-warnings --no-warnings' ts-node server.ts",
+#   //   "app": "concurrently \"pnpm dev\" \"pnpm dev:socket\"",
+#   //   "server": "node ./server.js",
+#   //   "build": "next build",
+#   //   "start": "PORT=3000 next start",
+#   //   "lint": "next lint",
+#   //   "build:models": "tsc --project tsconfig.models.json"
+#   // },
