--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,7 @@
 AUTH_SECRET="gBcYPMo/ilFrt+ayNxxHTuCuWFy39kHS0tepLM+iodg="
 # API_URL_PREFIX='http://localhost:8008/'
 API_URL_PREFIX='http://192.168.100.17:8008'
+API_URL_HOST='http://localhost:3000'
 AUTH_GOOGLE_ID='1023452282149-58kucibqqusp9a3l9v0vfnvcicpq73j8.apps.googleusercontent.com'
 AUTH_GOOGLE_SECRET='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'
 AUTH_TRUST_HOST=http://192.168.100.17:3000
@@ -12,6 +13,9 @@ NODE_ENV="development"
 HOSTNAME="d2c3200ab8bd"
 PORT=3000
 JWT_SECRET_KEY='marketplace@143'
+GOOGLE_CLOUD_PROJECT='generative-ai-457807'
+GOOGLE_API_KEY='AIzaSyAjD0lmi7nGjBSYbn9812bupoWnvJLoBWA'
+
 
 # // "scripts": {
 #   //   "dev": "next dev  --turbopack  -p 3000",
