--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "build:models": "tsc --project tsconfig.models.json"
   },
   "dependencies": {
+    "@google-cloud/vertexai": "^1.10.0",
     "@hookform/resolvers": "^3.10.0",
+    "@langchain/google-genai": "^0.2.4",
+    "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -45,6 +48,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.469.0",
     "mongoose": "^8.13.2",
+    "multer": "1.4.5-lts.2",
     "next": "15.2.2",
     "next-auth": "5.0.0-beta.25",
     "next-images": "^1.8.5",
@@ -60,6 +64,7 @@
     "swiper": "^11.2.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
   },
@@ -70,6 +75,7 @@
     "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.12",
     "@types/next": "^9.0.0",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^20",
